--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <div>어썸피플 회비계산기</div>
         <p>총 금액:
             <input type="text" id="t_value"><br><span id="t_value_error"></span>
-            <h5>- 필요에따라 1, 2차 따로 계산하시면 됩니다. </h5>
-            <h5>- 적립금 고려하셔서 적립금 만큼 금액 추가해주세요. (예시) 식비10만원 + 적립금2천원 =10만2천원 입력</h5>
-            <h5>- 여성 벙주님께서는 총액에 2만원 추가해주세요 (1차만) (예시) 식비10만원 + 적립금2천원 + 여벙주 2만원 = 12만2천원 입력</h5>
+            <h5>- 계산은 1차.2차 별도 +합산</h5>
+            <h5>- 적립금 고려하여 금액추가 (식비+적립금=엔빵)</h5>
+            <h5>- 여성벙주는 택시비+2만 (식비+적립금+2만=엔빵)</h5>
+            <h5>- 남성벙주는 여성회비로 체크</h5>
         </p>
 
         <p>남성 인원 (벙주 제외) :
