--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input type="text" id="t_value"><br><span id="t_value_error"></span>
             <h5>- 계산은 1차.2차 별도 +합산</h5>
             <h5>- 적립금 고려하여 금액추가 (식비+적립금=엔빵)</h5>
-            <h5>- 여성벙주는 택시비+2만 (식비+적립금+2만=엔빵)</h5>
+            <h5>- 여성벙주는 택시비+2만 (1차식비+적립금+2만=엔빵)</h5>
             <h5>- 남성벙주는 여성회비로 체크</h5>
         </p>
 
