--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <h5>- 적립금 고려하여 금액추가 (식비+적립금=엔빵)</h5>
             <h5>- 여성벙주는 택시비+2만 (1차식비+적립금+2만=엔빵)</h5>
             <h5>- 남성벙주는 여성회비로 체크</h5>
+            <h5>예시) 여성벙주경우 식비30만+적립금15,000원 +택시비2만= 총335,000원(엔빵)</h5>
+
         </p>
 
         <p>남성 인원 (벙주 제외) :
