--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h5>- 적립금 고려하여 금액추가 (식비+적립금=엔빵)</h5>
             <h5>- 여성벙주는 택시비+2만 (1차식비+적립금+2만=엔빵)</h5>
             <h5>- 남성벙주는 여성회비로 체크</h5>
-            <h5>예시) 여성벙주경우 식비30만+적립금15,000원 +택시비2만= 총335,000원(엔빵)</h5>
+            <h5>예시) 여성벙주경우 1차식비30만+적립금15,000원+택시비2만= 총335,000원(엔빵), 2차이후는 식비만 엔빵, 적립금 금액은 벙주맘(하트)(하트)</h5>
 
         </p>
 
