--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <small>1차식비30만+적립금15,000원</small><br>
             <small>+택시비2만= 총335,000원(엔빵)</small><br>
             <small>2차이후는 식비만 엔빵</small><br>
-            <small>적립금 금액은 벙주맘(하트)(하트)</small>
+            <small>적립금 금액은 벙주맘</small>
 
         </p>
 
